putting article content and fixing spacing on small

--- a/Day_11/sassy_surf/css/_mediaqueries.scss
+++ b/Day_11/sassy_surf/css/_mediaqueries.scss
@@ -1,17 +1,12 @@
-@media screen and (min-width: 480px) {
-   
-}
+@media screen and (min-width: 480px) {}
 
-@media screen and (min-width: 768px) {
-   
-}
+@media screen and (min-width: 768px) {}
 
 @media screen and (min-width: 992px) {
-  
-
-
+    .container {
+        width: 80%;
+        
+    }
 }
 
-@media screen and (min-width: 1400px) {
-    
-}
+@media screen and (min-width: 1400px) {}
