--- a/Day_11/sassy_surf/css/style.scss
+++ b/Day_11/sassy_surf/css/style.scss
@@ -4,11 +4,12 @@
 
 @import url(https://fonts.googleapis.com/css?family=Archivo+Narrow:400,700);
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,800,700);
 
 h1 {
     font-size: 3.125rem;
     font-size: 50px;
+    font-family: 'Fjalla One', sans-serif;
     font-weight: bold;
 }
 
@@ -17,12 +18,22 @@ h1, h2 {
     letter-spacing: .7;
 }
 
+h2 {
+    font-size: 2.5rem;
+    font-size: 40px;
+}
+
 h2, h3, h4 {
     font-family: 'Archivo Narrow', sans-serif;
     font-weight: 700;
 }
 
+h3 {
+    font-size: 25px;
+}
+
 h4 {
+    font-size: 1.875rem;
     font-size: 30px;
 }
 
@@ -30,14 +41,20 @@ a, span {
     display: inline-block;
 }
 
-a {
-    color: grey;
-    font-weight: bold;
-}
-
 span {
     font-family: 'Open Sans', sans-serif;
+    font-size: 0.875rem;
     font-size: 14px;
+    color: #5e686f;
+}
+
+a {
+    color: grey;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+    &:hover {
+        color: red;
+    }
 }
 
 p {
@@ -46,6 +63,10 @@ p {
     line-height: 1.6;
     font-size: 1rem;
     font-size: 16px;
+}
+
+strong {
+    font-weight: 700;
 }
 
 /*banner content--------------------------------------*/
@@ -59,10 +80,9 @@ header {
     h1 {
         // font-size: 90px;
         text-align: center;
-        margin-top: 230px;
+        margin-top: 220px;
         color: white;
         text-shadow: 2px 2px grey;
-        font-family: 'Fjalla One', sans-serif;
     }
     p {
         text-align: center;
@@ -89,8 +109,14 @@ header {
         color: white;
         font-size: 1.125rem;
         font-size: 18px;
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 700;
     }
 }
+
+
+
+
 
 .container {
     margin: 0 auto;
@@ -100,24 +126,20 @@ header {
 
 /*article_part1----------------------------------------------*/
 
-section {
-    // max-width: 780px;
-    margin: 0 auto;
-    overflow: hidden;
-    p:nth-child(1) {
-        margin-top: 76px;
-    }
-}
-
 article {
-    max-width: 621px;
     clear: both;
     text-align: left;
     float: left;
+    margin-bottom: 60px;
+    
     h2 {
-        font-size: 40px;
         color: #083452;
         margin-bottom: 18px;
+        max-width: 450px;
+    }
+    h3 {
+        margin-bottom: 10px;
+        color: #083452;
     }
     img {
         max-width: 40px;
@@ -135,6 +157,11 @@ article {
     }
     p {
         color: #5e686f;
+        max-width: 550px;
+    }
+    .marg{
+        margin-top:30px;
+
     }
 }
 
@@ -145,6 +172,7 @@ h4 {
     border-left: 2px solid #a3b3bf;
     padding: 18px 0 6px 16px;
     margin-bottom: 20px;
+
 }
 
 /*WOAH--------------------------------------------------------------------------*/
@@ -162,9 +190,9 @@ h4 {
 // }
 
 // article two--------------------------------------------------------------------
-.article-two a {
-    color: #106db3;
-}
+// .article-two a {
+//     color: #106db3;
+// }
 
 /* article nav---------------------------------------------------------------------*/
 
@@ -352,3 +380,6 @@ footer {
         font-size: 14px;
     }
 }
+
+
+@import "mediaqueries";
